crates/fec-cli/src/tui/snapshots/libfec__tui__candidate_detail__tests__candidate_detail_financial_summary_no_coverage_date.snap
---
source: crates/fec-cli/src/tui/candidate_detail.rs
expression: terminal.backend()
snapshot_kind: text
---
"│SMITH, JOHN Q (P00000001)                                                      "
"Democrat presidential candidate in 2024                                         "
"Campaign committee: C00123456                                                   "
"┌Financial Summary──────────────────────────────┐                               "
"│ Total Receipts                   $1,234,567.89│                               "
"│ Total Disbursements                $987,654.32│                               "
"│ Cash on Hand                       $246,913.57│                               "
"│ Individual Contributions           $800,000.00│                               "
"│ Committee Contributions            $150,000.00│                               "
"└───────────────────────────────────────────────┘                               "
"Address:                                                                        "
"  123 Campaign Trail                                                            "
"  Suite 100                                                                     "
"  Washington, DC 20001                                                          "
"                                                                                "
"Press f to fetch filings                                                        "
"┌Filings for P00000001 - 2026 (0 filings)──────────────────────────────────────┐"
"│Filing ID      Form     Report               Coverage             Received    │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"Esc/q back  c committee  a F1 affiliations  o fec.gov  r contest  y copy  f fili"
