crates/fec-cli/src/tui/snapshots/libfec__tui__candidate_detail__tests__candidate_detail_house.snap
---
source: crates/fec-cli/src/tui/candidate_detail.rs
expression: terminal.backend()
snapshot_kind: text
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│DOE, JANE A (H4CA12345)                                                       │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Candidate Information─────────────────────────────────────────────────────────┐"
"│Candidate ID: H4CA12345                                                       │"
"│                                                                              │"
"│Name: DOE, JANE A                                                             │"
"│                                                                              │"
"│Office: U.S. House (CA-12)                                                    │"
"│Election Year: 2024                                                           │"
"│                                                                              │"
"│Party: REP                                                                    │"
"│Status: Incumbent                                                             │"
"│Candidate Status: C                                                           │"
"│                                                                              │"
"│Principal Campaign Committee: C00654321 (press 'c' to view)                   │"
"│                                                                              │"
"│Address:                                                                      │"
"│  456 Main Street                                                             │"
"│  Los Angeles, CA 90001                                                       │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"          Esc/q back  c committee  a F1 affiliations  y copy  f filings         "
