crates/fec-cli/src/tui/snapshots/libfec__tui__candidate_detail__tests__candidate_detail_wide_terminal.snap
---
source: crates/fec-cli/src/tui/candidate_detail.rs
expression: terminal.backend()
snapshot_kind: text
---
"│SMITH, JOHN Q (P00000001)                                                                                              "
"Presidential candidate in 2024, running as a Democrat                                                                   "
"Principal Campaign Committee: C00123456 (press 'c' to view)                                                             "
"                                                                                                                        "
"Address:                                                                                                                "
"  123 Campaign Trail                                                                                                    "
"  Suite 100                                                                                                             "
"  Washington, DC 20001                                                                                                  "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"┌Filings for P00000001 - 2026 (0 filings)──────────────────────────────────────────────────────────────────────────────┐"
"│Filing ID      Form     Report               Coverage                                                     Received    │"
"│Press 'f' to f                                                                                                        │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"                              Esc/q back  c committee  a F1 affiliations  y copy  f filings                             "
