crates/fec-cli/src/tui/snapshots/libfec__tui__candidate_detail__tests__candidate_detail_with_yank_popup.snap
---
source: crates/fec-cli/src/tui/candidate_detail.rs
expression: terminal.backend()
snapshot_kind: text
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│SMITH, JOHN Q (P00000001)                                                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Candidate Informatio──────────────────────────────────────────────────────────┐"
"│Candidate ID: P00000001                                                       │"
"│                                                                              │"
"│Name: SMITH, JOHN Q                                                           │"
"│                   ┌Copy to Clipboard─────────────────────┐                   │"
"│Office: President  │Select what to copy:                  │                   │"
"│Election Year: 2024│                                      │                   │"
"│                   │>> Candidate ID: P00000001            │                   │"
"│Party: DEM         │   Committee ID: C00123456            │                   │"
"│Status: Challenger │   Candidate Name: SMITH, JOHN Q      │                   │"
"│Candidate Status: C│                                      │                   │"
"│                   │↑/↓ or j/k navigate  Enter copy  Esc  │                   │"
"│Principal Campaign │cancel                                │                   │"
"│                   └──────────────────────────────────────┘                   │"
"│Address:                                                                      │"
"│  123 Campaign Trail                                                          │"
"│  Suite 100                                                                   │"
"│  Washington, DC 20001                                                        │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"          Esc/q back  c committee  a F1 affiliations  y copy  f filings         "
